# MSc-Theesis-SAR-Drone-Sandbox

./: README.md
AIS/PC/: index.html  server.py  setup_venv.sh  ships.db  ships.db-shm  ships.db-wal
AIS/RPI/: ais_forwarder.py
LaTeX/: abstract.tex  chap-introduction.tex  frontpage.tex  listings.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  main.toc  mybibliography.bib  terms_and_important_stuff.tex
LaTeX/sections/: ais.tex  ais_RX.tex  ais_replay.tex  benchmark.tex  conclusion.tex  default_drone.tex  differences.tex  gantt.tex  grid_navigation.tex  introduction.tex  links.tex  lora.tex  ship_model_dynamics.tex  sim_comm.tex  swarm_controller.tex  swarm_validation.tex  virtual_sensors.tex  wave_model.tex
Live_SIM_map/: maritime_display.html  server_start.sh
SIM/: .gitignore  CMakeLists.txt  README.md  readme
SIM/Assets/: Skybox.mat
SIM/Assets/AIS_data/: ais_1h_20260428_130901.csv  ais_3h_.csv
SIM/Assets/Models/Cardinal_buoy/materials/: Buoy_Black.mat  Buoy_Yellow.mat
SIM/Assets/Models/ONR_SHIP/Materials/: 0.000000_0.000000_0.000000_0.000000_0.000000.mat  0.243137_0.243137_1.000000_0.000000_0.000000.mat  0.910000_0.910000_0.910000_0.000000_0.000000.mat  1.000000_0.494118_0.000000_0.000000_0.000000.mat
SIM/Assets/Models/ONR_SHIP/Materials/ONR_material/: 1.000000_1.000000_1.000000_0.000000_0.000000.mat
SIM/Assets/Prefabs/: AIS_SHIP_prefab.prefab  BuoyZone.prefab  DroneShipV2.prefab  Trajectory_Ship.prefab
SIM/Assets/Scenes/: Main.unity
SIM/Assets/Scripts/: BenchmarkManager.cs  BuoyZone.cs  DroneManager.cs  RTSCamera.cs  TimeScaleController.cs  WaterSystem.cs  WindSimulator.cs  WindSock.cs
SIM/Assets/Scripts/DroneShipScripts/: DroneShipData.cs  ShipBuoyancy.cs  ShipDriver.cs  vCOMPASS.cs  vGPS.cs  vIMU.cs
SIM/Assets/Scripts/LORA/: LoRaMedium.cs  LoRaRadio.cs  LoRaTypes.cs
SIM/Assets/Scripts/Network/: DroneFleetManager.cs  DroneUDPBridge.cs
SIM/Assets/Scripts/WebMap/: AISHttpServer.cs
SIM/Assets/Scripts/vShips/: AISManager.cs  AISReceiver.cs  AISReplaySystem.cs  AISTransponder.cs  BigShip.cs
SIM/Assets/Shaders/: Custom_SeaShader.mat  SeaShader.shader
SIM/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF.asset
SIM/ProjectSettings/: ProjectSettings.asset  ProjectSettings.asset.private.0  QualitySettings.asset  TagManager.asset
SIM/rsc/ONR_SHIP/: ONR_TUMBLEHOME.mtl
SIM/rsc/SEA_SHADER/: sea.vs  sea_flatness.glsl  sea_vertex.glsl
SIM/rsc/SHADOWS_SHADER/: shadows.fs  shadows.vs
SIM/src/: main.cpp
SIM/src/EngineTools/: GameObjectRegistry.cpp  GameObjectRegistry.h  ModelRegistry.cpp  ModelRegistry.h
SIM/src/Objects/: GameObject.cpp  GameObject.h  template_class.cpp  template_class.h
SIM/src/Objects/DroneShip/: DroneShip.cpp  DroneShip.h
SIM/src/Objects/MainCamera/: main_camera.cpp  main_camera.h
SIM/src/Objects/SEA_model/: sea.cpp  sea.h
SIM/src/Tools/: rigidbody.cpp  rigidbody.h  tracker.cpp  tracker.h
SITL/: CMakeLists.txt  GridPatrol.h  KalmanFilter.h  LoraSwarm.h  README.md  SwarmDroneController.h  TrajectoryController.h  ZoneLoader.h  config.h
SITL/controllers/: DroneController.cpp  DroneController.h
SITL/include/: config.h  json_parser.h  packets.h
SITL/kalman_nav/: CMakeLists.txt  HeadingPID.h  KalmanNav.h  WaypointNav.h  kalman_main.cpp
SITL/src/: main.cpp  swarm_main.cpp
SITL_v0.1/: CMakeLists.txt
SITL_v0.1/controllers/: DroneController.cpp
SITL_v0.1/include/: json_parser.h
SITLv3/: AISAvoidance.h  CMakeLists.txt  CollisionAvoidance.h  DroneAgent.h  EKFLogger.h  GridLogger.h  HeadingPID.h  KalmanNav.h  MissionLoader.h  README.md  SpeedP.h  SurveillanceGrid.h  SurveillanceLoRa.h  SwarmController.h  config.h
SITLv3/include/: transport.h
SITLv3/src/: main.cpp
SITLv3/zones/: mission.json  validation_zone.json
test_data/: coverage_from_pos.csv  coverage_from_positions.py  ekf_validation_half_swarm_spoofed.csv  ekf_validation_normal.csv  ekf_validation_spoof.csv  grid_plot.py  mindist_from_pos.csv  scatter_plot.py
test_data/ekf_venv/: pyvenv.cfg
test_data/grid_coverage_01/: grid_cells.csv  grid_coverage.csv
test_data/grid_coverage_02/: drone_positions.csv  grid_cells.csv  grid_coverage.csv  mindist_from_pos.csv
test_data/grid_coverage_03/: coverage_from_pos.csv  drone_positions.csv  grid_cells.csv  grid_coverage.csv  mindist_from_pos.csv
